<resources>
    <string name="app_name">EHI API Test Application</string>
    <string name="app_description">This app calls https://api.github.com/users/google/repos to get a list of repos, and displays those repos by clicking the \'View Repos\' button below.</string>
    <string name="view_repos">View Repos</string>
    <string name="repo_name_label">Repo Name: </string>
    <string name="last_updated_label">Last Updated: </string>
    <string name="owner_name_label">Owner Name: </string>
    <string name="loading_content">Loading Content. Please wait.</string>
    <string name="description_label">Description: </string>
    <string name="created_label">Created: </string>
    <string name="link_label">Repo Link: </string>
    <string name="license_label">License Info: </string>
    <string name="key_label">Key: </string>
    <string name="license_name_label">Name: </string>
    <string name="spdx_id_label">SPDX ID: </string>
    <string name="url_label">URL: </string>
    <string name="node_id">Node ID: </string>
    <string name="welcome_text">WELCOME</string>
    <string name="error_string">An error has occurred, please try again.</string>
</resources>
