<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow style="@style/RepoDetailLayoutPadding">
        <TextView
            style="@style/RepoDetailItemLabel"
            android:id="@+id/tvRepoNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_name_label" />

        <TextView
            style="@style/RepoDetailItem"
            android:id="@+id/tvRepoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{repoViewModel.repoName, default=placeholder}"/>
    </TableRow>

    <TableRow style="@style/RepoDetailLayoutPadding">
        <TextView
            style="@style/RepoDetailItemLabel"
            android:id="@+id/tvDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"/>


        <TextView
            style="@style/RepoDetailItem"
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{repoViewModel.description, default=placeholder}"/>
    </TableRow>

    <TableRow style="@style/RepoDetailLayoutPadding">
        <TextView
            style="@style/RepoDetailItemLabel"
            android:id="@+id/tvCreatedDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_label" />

        <TextView
            style="@style/RepoDetailItem"
            android:id="@+id/tvCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{repoViewModel.createdDate, default=placeholder}"/>
    </TableRow>

    <TableRow style="@style/RepoDetailLayoutPadding">
        <TextView
            style="@style/RepoDetailItemLabel"
            android:id="@+id/tvLastUpdatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated_label" />


        <TextView
            style="@style/RepoDetailItem"
            android:id="@+id/tvLastUpdatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{repoViewModel.lastUpdatedDate, default=placeholder}"/>
    </TableRow>

    <TableRow style="@style/RepoDetailLayoutPadding">
        <TextView
            style="@style/RepoDetailItemLabel"
            android:id="@+id/tvLinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_label" />


        <TextView
            style="@style/RepoDetailItem"
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{repoViewModel.repoLink, default=placeholder}"/>
    </TableRow>

    <TableRow style="@style/RepoDetailLayoutPadding">

        <TextView
            style="@style/RepoDetailItemLabel"
            android:id="@+id/tvLicenseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_label" />

    </TableRow>

</TableLayout>