<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="repoViewModel"
            type="ehi.ehiapplication.viewmodels.RepoViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <TextView
                style="@style/RepoListItemLabel"
                android:id="@+id/repoNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_name_label"/>

            <TextView
                android:id="@+id/tvRepoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:text="@{repoViewModel.repoName, default=placeholder}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <TextView
                style="@style/RepoListItemLabel"
                android:id="@+id/lastUpdatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated_label"/>

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:text="@{repoViewModel.lastUpdatedDate, default=placeholder}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <TextView
                style="@style/RepoListItemLabel"
                android:id="@+id/ownerNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_name_label"/>

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:text="@{repoViewModel.owner.login, default=placeholder}" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

    </LinearLayout>
</layout>